
<resources>
    <string name="app_name">ProofAndreEduardo</string>
    <string name="ex2_tv_red">Red</string>
    <string name="ex2_tv_green">Green</string>
    <string name="ex2_tv_blue">Blue</string>
    <string name="ex2_tv_yellow">Yellow</string>


    <string name="ex2_tv_one">row one</string>
    <string name="ex2_tv_two">row two</string>
    <string name="ex2_tv_three">row three</string>
    <string name="ex2_tv_four">row four</string>
    <string name="ss_tv_inicio">Starting</string>
    <string name="ma_tv_dados" >Enter your personal information</string>
    <string name="ma_et_nome">Name completed</string>
    <string name="ma_tv_sexo">Sex</string>
    <string name="ma_rd_masculino">Male</string>
    <string name="ma_rd_female">Female</string>
    <string name="ma_et_ddd">DDD</string>
    <string name="ma_et_telefone">Phone</string>
    <string name="ma_et_cpf">CPF</string>
    <string name="ma_et_email">E-Mail</string>
    <string name="ma_et_senha">Passoword</string>
    <string name="ma_et_repetir_senha">Replay Password</string>
    <string name="ma_tv_pizzas">Favorite pizzas</string>
    <string name="ma_ch_frango">Chicken</string>
    <string name="ma_ch_calabresa">Pepperoni</string>
    <string name="ma_bt_cadastrar">Register</string>


</resources>
